--- a/packaging/PHT/TurboLinux/makerpms.sh.tmpl
+++ b/packaging/PHT/TurboLinux/makerpms.sh.tmpl
@@ -1,9 +1,8 @@
 #!/bin/sh
-# Copyright (C) John H Terpstra 1998
+# Copyright (C) 1998 John H Terpstra, 1999 K Spoon
 #
-RPMDIR=`rpm --showrc | awk '/^rpmdir/ { print $3}'`
-SPECDIR=`rpm --showrc | awk '/^specdir/ { print $3}'`
-SRCDIR=`rpm --showrc | awk '/^sourcedir/ { print $3}'`
+SPECDIR=/usr/src/turbo/SPECS
+SRCDIR=/usr/src/turbo/SOURCES
 USERID=`id -u`
 GRPID=`id -g`
 
