--- a/packaging/PHT/TurboLinux/samba2.spec.tmpl
+++ b/packaging/PHT/TurboLinux/samba2.spec.tmpl
@@ -7,9 +7,10 @@ Group: Networking
 Source: ftp://samba.org/pub/samba/samba-PVERSION.tar.gz
 Patch: makefile-path.patch
 Patch1: smbw.patch
-Requires: pam >= 0.64 kernel >= 2.2.1
+Requires: pam >= 0.64 kernel >= 2.2.1 glibc >= 2.1.2
 Prereq: chkconfig fileutils
 BuildRoot: /var/tmp/samba
+
 
 %package debugtools
 Version: PVERSION
@@ -59,8 +60,18 @@ server. Please use it with care. If you do not need it then do NOT
 install.
 
 %changelog
+* Fri Oct 29 1999 Kelley Spoon <kspoon@turbolinux.com>
+- get rid of the rc?.d directories
+- -j flags for make command to (hopefully) speed up on 
+  SMP systems
+- discoverd that John had already made the changes I
+  was going to do...
+- Wait!  He forgot to move the man pages into /usr/share!
+  Cool... I get to do something substantial.
+
 * Sun Oct 16 1999 John H Terspstra <jht@turbolinux.com>
 - changed mount.smb to link to smbmount
+- removed smbwrappers as it is broken with glibc-2.1.x
 
 * Sun May 09 1999 John H Terpstra <jht@samba.org>
 - Added smbtorture et al.
@@ -132,8 +143,10 @@ install.
 
 %build
 cd source
-CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=/usr --libdir=/etc --with-lockdir=/var/lock/samba --with-privatedir=/etc --with-swatdir=/usr/share/swat --with-smbwrapper --with-automount --with-quotas --with-smbmount --with-pam
-make all smbwrapper smbtorture rpctorture smbfilter debug2html
+NUMCPU=`grep processor /proc/cpuinfo | wc -l`
+# CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=/usr --libdir=/etc --with-lockdir=/var/lock/samba --with-privatedir=/etc --with-swatdir=/usr/share/swat --with-smbwrapper --with-automount --with-quotas --with-smbmount --with-pam
+CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=/usr --libdir=/etc --with-lockdir=/var/lock/samba --with-privatedir=/etc --with-swatdir=/usr/share/swat --with-automount --with-quotas --with-smbmount --with-pam
+make -j${NUMCPU} all smbtorture rpctorture smbfilter debug2html # smbwrapper 
 
 
 %install
@@ -141,18 +154,19 @@ rm -rf $RPM_BUILD_ROOT
 mkdir -p $RPM_BUILD_ROOT/sbin
 mkdir -p $RPM_BUILD_ROOT/etc/codepages/src
 mkdir -p $RPM_BUILD_ROOT/etc/{logrotate.d,pam.d}
-mkdir -p $RPM_BUILD_ROOT/etc/rc.d/{init.d,rc0.d,rc1.d,rc2.d,rc3.d,rc5.d,rc6.d}
+mkdir -p $RPM_BUILD_ROOT/etc/rc.d/init.d
 mkdir -p $RPM_BUILD_ROOT/home/samba
 mkdir -p $RPM_BUILD_ROOT/usr/{bin,sbin}
 mkdir -p $RPM_BUILD_ROOT/usr/share/swat/{images,help,include}
-mkdir -p $RPM_BUILD_ROOT/usr/man/{man1,man5,man7,man8}
+mkdir -p $RPM_BUILD_ROOT/usr/share/man/{man1,man5,man7,man8}
 mkdir -p $RPM_BUILD_ROOT/var/lock/samba
 mkdir -p $RPM_BUILD_ROOT/var/log/samba
 mkdir -p $RPM_BUILD_ROOT/var/spool/samba
 
 # Install standard binary files
+# At a later date add smbsh and smbwrapper.so back into line below
 for i in nmblookup smbclient smbpasswd smbstatus testparm testprns \
-      make_smbcodepage make_printerdef rpcclient smbsh smbwrapper.so
+      make_smbcodepage make_printerdef rpcclient
 do
 install -m755 -s source/bin/$i $RPM_BUILD_ROOT/usr/bin
 done
@@ -170,9 +184,10 @@ done
 ln $RPM_BUILD_ROOT/usr/sbin/smbmount $RPM_BUILD_ROOT/sbin/mount.smb
 
 # Install level 1 man pages
-for i in smbclient.1 smbrun.1 smbstatus.1 smbtar.1 testparm.1 testprns.1 make_smbcodepage.1 nmblookup.1 smbsh.1
+# At a later date add back to line below: smbsh.1
+for i in smbclient.1 smbrun.1 smbstatus.1 smbtar.1 testparm.1 testprns.1 make_smbcodepage.1 nmblookup.1
 do
-install -m644 docs/manpages/$i $RPM_BUILD_ROOT/usr/man/man1
+install -m644 docs/manpages/$i $RPM_BUILD_ROOT/usr/share/man/man1
 done
 
 # Install codepage source files
@@ -197,17 +212,17 @@ done
 
 # Install the miscellany
 install -m644 swat/README $RPM_BUILD_ROOT/usr/share/swat
-install -m644 docs/manpages/smb.conf.5 $RPM_BUILD_ROOT/usr/man/man5
-install -m644 docs/manpages/lmhosts.5 $RPM_BUILD_ROOT/usr/man/man5
-install -m644 docs/manpages/smbpasswd.5 $RPM_BUILD_ROOT/usr/man/man5
-install -m644 docs/manpages/samba.7 $RPM_BUILD_ROOT/usr/man/man7
-install -m644 docs/manpages/smbd.8 $RPM_BUILD_ROOT/usr/man/man8
-install -m644 docs/manpages/nmbd.8 $RPM_BUILD_ROOT/usr/man/man8
-install -m644 docs/manpages/smbpasswd.8 $RPM_BUILD_ROOT/usr/man/man8
-install -m644 docs/manpages/swat.8 $RPM_BUILD_ROOT/usr/man/man8
-install -m644 docs/manpages/smbmount.8 $RPM_BUILD_ROOT/usr/man/man8
-install -m644 docs/manpages/smbmnt.8 $RPM_BUILD_ROOT/usr/man/man8
-install -m644 docs/manpages/smbumount.8 $RPM_BUILD_ROOT/usr/man/man8
+install -m644 docs/manpages/smb.conf.5 $RPM_BUILD_ROOT/usr/share/man/man5
+install -m644 docs/manpages/lmhosts.5 $RPM_BUILD_ROOT/usr/share/man/man5
+install -m644 docs/manpages/smbpasswd.5 $RPM_BUILD_ROOT/usr/share/man/man5
+install -m644 docs/manpages/samba.7 $RPM_BUILD_ROOT/usr/share/man/man7
+install -m644 docs/manpages/smbd.8 $RPM_BUILD_ROOT/usr/share/man/man8
+install -m644 docs/manpages/nmbd.8 $RPM_BUILD_ROOT/usr/share/man/man8
+install -m644 docs/manpages/smbpasswd.8 $RPM_BUILD_ROOT/usr/share/man/man8
+install -m644 docs/manpages/swat.8 $RPM_BUILD_ROOT/usr/share/man/man8
+install -m644 docs/manpages/smbmount.8 $RPM_BUILD_ROOT/usr/share/man/man8
+install -m644 docs/manpages/smbmnt.8 $RPM_BUILD_ROOT/usr/share/man/man8
+install -m644 docs/manpages/smbumount.8 $RPM_BUILD_ROOT/usr/share/man/man8
 # The mount.smb script has been obsoleted.
 # install -m644 packaging/PHT/TurboLinux/mount.smb $RPM_BUILD_ROOT/sbin
 install -m644 packaging/PHT/TurboLinux/smb.conf $RPM_BUILD_ROOT/etc/smb.conf
@@ -226,6 +241,7 @@ rm -rf $RPM_BUILD_ROOT
 
 %post
 /sbin/chkconfig --add smb
+/sbin/chkconfig smb off
 
 # Build codepage load files
 for i in 437 737 850 852 861 866 932 936 949 950
@@ -325,8 +341,8 @@ fi
 %attr(-,root,root) /usr/bin/smbtar
 %attr(-,root,root) /usr/bin/smbprint
 %attr(-,root,root) /usr/bin/smbadduser
-%attr(0755,root,root) /usr/bin/smbsh
-%attr(0755,root,root) /usr/bin/smbwrapper.so
+# %attr(0755,root,root) /usr/bin/smbsh
+# %attr(0755,root,root) /usr/bin/smbwrapper.so
 %attr(-,root,root) /usr/share/swat/help/welcome.html
 %attr(-,root,root) /usr/share/swat/help/DOMAIN_MEMBER.html
 %attr(-,root,root) /usr/share/swat/help/lmhosts.5.html
@@ -340,7 +356,7 @@ fi
 %attr(-,root,root) /usr/share/swat/help/smbpasswd.5.html
 %attr(-,root,root) /usr/share/swat/help/smbpasswd.8.html
 %attr(-,root,root) /usr/share/swat/help/smbrun.1.html
-%attr(-,root,root) /usr/share/swat/help/smbsh.1.html
+# %attr(-,root,root) /usr/share/swat/help/smbsh.1.html
 %attr(-,root,root) /usr/share/swat/help/smbstatus.1.html
 %attr(-,root,root) /usr/share/swat/help/smbtar.1.html
 %attr(-,root,root) /usr/share/swat/help/swat.8.html
@@ -372,21 +388,21 @@ fi
 %attr(-,root,root) /etc/codepages/src/codepage_def.936
 %attr(-,root,root) /etc/codepages/src/codepage_def.949
 %attr(-,root,root) /etc/codepages/src/codepage_def.950
-%attr(-,root,root) /usr/man/man1/smbstatus.1
-%attr(-,root,root) /usr/man/man1/nmblookup.1
-%attr(-,root,root) /usr/man/man1/smbclient.1
-%attr(-,root,root) /usr/man/man1/make_smbcodepage.1
-%attr(-,root,root) /usr/man/man1/smbrun.1
-%attr(-,root,root) /usr/man/man1/smbsh.1
-%attr(-,root,root) /usr/man/man1/smbtar.1
-%attr(-,root,root) /usr/man/man1/testparm.1
-%attr(-,root,root) /usr/man/man1/testprns.1
-%attr(-,root,root) /usr/man/man5/smb.conf.5
-%attr(-,root,root) /usr/man/man7/samba.7
-%attr(-,root,root) /usr/man/man8/smbd.8
-%attr(-,root,root) /usr/man/man8/nmbd.8
-%attr(-,root,root) /usr/man/man8/swat.8
-%attr(-,root,root) /usr/man/man8/smbpasswd.8
+%attr(-,root,root) /usr/share/man/man1/smbstatus.1
+%attr(-,root,root) /usr/share/man/man1/nmblookup.1
+%attr(-,root,root) /usr/share/man/man1/smbclient.1
+%attr(-,root,root) /usr/share/man/man1/make_smbcodepage.1
+%attr(-,root,root) /usr/share/man/man1/smbrun.1
+# %attr(-,root,root) /usr/share/man/man1/smbsh.1
+%attr(-,root,root) /usr/share/man/man1/smbtar.1
+%attr(-,root,root) /usr/share/man/man1/testparm.1
+%attr(-,root,root) /usr/share/man/man1/testprns.1
+%attr(-,root,root) /usr/share/man/man5/smb.conf.5
+%attr(-,root,root) /usr/share/man/man7/samba.7
+%attr(-,root,root) /usr/share/man/man8/smbd.8
+%attr(-,root,root) /usr/share/man/man8/nmbd.8
+%attr(-,root,root) /usr/share/man/man8/swat.8
+%attr(-,root,root) /usr/share/man/man8/smbpasswd.8
 %attr(-,root,nobody) %dir /home/samba
 %attr(-,root,root) %dir /etc/codepages
 %attr(-,root,root) %dir /etc/codepages/src
@@ -399,9 +415,9 @@ fi
 %attr(-,root,root) /usr/sbin/smbumount
 %attr(-,root,root) /usr/sbin/smbmnt
 %attr(-,root,root) /sbin/mount.smb
-%attr(-,root,root) /usr/man/man8/smbmnt.8
-%attr(-,root,root) /usr/man/man8/smbmount.8
-%attr(-,root,root) /usr/man/man8/smbumount.8
+%attr(-,root,root) /usr/share/man/man8/smbmnt.8
+%attr(-,root,root) /usr/share/man/man8/smbmount.8
+%attr(-,root,root) /usr/share/man/man8/smbumount.8
 
 %files debugtools
 %attr(-,root,root) /usr/sbin/smbtorture
