packaging(RHEL-CTDB): add the cifs.upcall binary to the client package.
Michael
(cherry picked from commit 1875b373a319ac9494fdc907793e59804c577a4d)
(cherry picked from commit e1dca5f1870975b7d9a57869357c971d559afdfe)

--- a/packaging/RHEL-CTDB/samba.spec.tmpl
+++ b/packaging/RHEL-CTDB/samba.spec.tmpl
@@ -417,6 +417,8 @@ exit 0
 /sbin/mount.cifs
 /sbin/umount.cifs
 
+%{_sbindir}/cifs.upcall
+
 %{_bindir}/rpcclient
 %{_bindir}/smbcacls
 %{_bindir}/findsmb
