--- a/packaging/RHEL-CTDB/samba.spec.tmpl
+++ b/packaging/RHEL-CTDB/samba.spec.tmpl
@@ -168,7 +168,7 @@ CFLAGS="$RPM_OPT_FLAGS $EXTRA -D_GNU_SOURCE" ./configure \
         --without-smbwrapper \
 	--with-pam \
 	--with-quotas \
-	--with-shared-modules=idmap_rid,idmap_ad,idmap_tdb2 \
+	--with-shared-modules=idmap_rid,idmap_ad,idmap_tdb2,vfs_gpfs \
 	--with-syslog \
 	--with-utmp \
 	--with-cluster-support \
