--- a/packaging/RHEL-CTDB/samba.spec.tmpl
+++ b/packaging/RHEL-CTDB/samba.spec.tmpl
@@ -133,12 +133,12 @@ cd source
 # RPM_OPT_FLAGS="$RPM_OPT_FLAGS -D_FILE_OFFSET_BITS=64"
 
 ## check for ccache
-# ccache -h 2>&1 > /dev/null
-#if [ $? -eq 0 ]; then
-#	CC="ccache gcc"
-#else
+ccache -h 2>&1 > /dev/null
+if [ $? -eq 0 ]; then
+	CC="ccache gcc"
+else
 	CC="gcc"
-#fi 
+fi
 
 ## always run autogen.sh
 ./autogen.sh
