--- a/packaging/RHEL-CTDB/samba.spec.tmpl
+++ b/packaging/RHEL-CTDB/samba.spec.tmpl
@@ -133,8 +133,7 @@ cd source
 # RPM_OPT_FLAGS="$RPM_OPT_FLAGS -D_FILE_OFFSET_BITS=64"
 
 ## check for ccache
-ccache -h 2>&1 > /dev/null
-if [ $? -eq 0 ]; then
+if ccache -h 2>&1 > /dev/null ; then
 	CC="ccache gcc"
 else
 	CC="gcc"
