packaging(RHEL-CTDB): don't show failure messages in check for ccache
by fixing the order of "> /dev/null 2>&1"

Michael
(cherry picked from commit 0e9d5638a7c375b3b18f19f83f97924ab45ad382)
(cherry picked from commit 6e51f250c5d38e973948aa1d53222bcccdcca365)

--- a/packaging/RHEL-CTDB/samba.spec.tmpl
+++ b/packaging/RHEL-CTDB/samba.spec.tmpl
@@ -133,7 +133,7 @@ cd source
 # RPM_OPT_FLAGS="$RPM_OPT_FLAGS -D_FILE_OFFSET_BITS=64"
 
 ## check for ccache
-if ccache -h 2>&1 > /dev/null ; then
+if ccache -h >/dev/null 2>&1 ; then
 	CC="ccache gcc"
 else
 	CC="gcc"
